--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,12 @@
-server.contextPath=
 server.port=5557
-#spring.application.index=true
+
 spring.application.name=rocketmq-exporter
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 logging.config=classpath:logback.xml
-#if this value is empty,use env value rocketmq.config.namesrvAddr  NAMESRV_ADDR | now, you can set it in ops page.default localhost:9876
+#if this value is empty,use env value rocketmq.config.namesrvAddr  NAMESRV_ADDR
 rocketmq.config.namesrvAddr=192.168.0.48:9876
-#if you use rocketmq version < 3.5.8, rocketmq.config.isVIPChannel should be false.default true
-rocketmq.config.isVIPChannel=
-#rocketmq-console's data path:dashboard/monitor
-rocketmq.config.dataPath=/tmp/rocketmq-exporter/data
-#set it false if you don't want use dashboard.default true
+
+
 rocketmq.config.enableCollect=true
-#set the message track trace topic if you don't want use the default one
-rocketmq.config.msgTrackTopicName=
